--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "json-server": "^0.16.3",
     "node-fetch": "^2.7.0",
+    "path": "^0.12.7",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1"
   },
@@ -44,6 +49,13 @@
       "<rootDir>/jest.setup.js"
     ],
     "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": ["/test_suites"]
-  }
+    "testPathIgnorePatterns": [
+      "/test_suites"
+    ]
+  },
+  "description": "## Demo",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
