--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "json-server --watch db.json -p 6001",
-    "test": "jest --bail"
+    "test": "jest --bail",
+    "build": "react-scripts build",
+    "eject": "react"
    
   },
   "eslintConfig": {
